# LibGetSet

./: .coveragerc  .gitignore  .gitmodules  AUTHORS.rst  CMakeLists.txt  Doxyfile  GetSetBuildTreeSettings.cmake.in  GetSetConfig.cmake  GetSetConfig.cmake.in  GetSetConfigVersion.cmake.in  License.txt  MANIFEST.in  README.rst  cmakelists.txt  main.cpp  main_cli.cpp  main_test.cpp  main_xml.cpp  setup.cfg  setup.py
Apps/: AutoGUI.cpp  CMakeLists.txt  GetSet.xml  GetSetScript.getset  Process.cpp  Process.h  ScriptSyntax.txt  getsetconfig.cpp  getsetscript.cpp  runProcess.cpp  runProcess.h  script.getset  test.cpp  testXML.cpp
Apps/AutoGUI/: AutoConf.cpp  AutoGUI.cpp  ConfigureProcess.h  Process.cpp  Process.h  Process_posix.cpp  Process_win32.cpp  QClientWindow.cpp  QClientWindow.h
EpipolarConsistencyPythonBindings/: CMakeLists.txt
EpipolarConsistencyPythonBindings/source/: _epipolar_consistency.cpp  _nrrd_image.hpp  _projection_matrix.hpp  _projective_geometry.hpp  test.cpp
EpipolarConsistencyPythonModule/: CMakeLists.txt
Example/: README.txt  main.cpp  settings.ini
GetSet/: CMakeLists.txt  Configurator.hxx  Factory.cpp  Factory.h  GetSet.hxx  GetSetBaseTypes.h  GetSetCmdLine.h  GetSetCmdLine.hxx  GetSetCmdLineParser.cpp  GetSetCmdLineParser.h  GetSetDictionary.cpp  GetSetDictionary.h  GetSetFile.cpp  GetSetFile.h  GetSetIO.cpp  GetSetIO.h  GetSetInternal.cpp  GetSetInternal.h  GetSetLog.hxx  GetSetObjects.cpp  GetSetObjects.h  GetSetObjects.hxx  GetSetScripting.cpp  GetSetScripting.h  GetSetScripting.hxx  GetSetSection.hxx  GetSetSpecial.hxx  GetSetUtil.hxx  GetSetXML.cpp  GetSetXML.h  GetSet_impl.hxx  Initializer.h  Initializer.hxx  ObjectFactory.cpp  ObjectFactory.h  ProgressInterface.hxx  StringConversion.hxx  StringHexData.hxx  StringUtil.hxx  TypeString.hxx  (+1 more)
GetSetGui/: CMakeLists.txt  GetSetGui.cpp  GetSetGui.h  GetSetModalDialog.cpp  GetSetModalDialog.h  GetSetMouseKeyboardInteraction.cpp  GetSetMouseKeyboardInteraction.h  GetSetProgressWindow.cpp  GetSetProgressWindow.h  GetSetScriptEdit.cpp  GetSetScriptEdit.h  GetSetSettingsWindow.cpp  GetSetSettingsWindow.h  GetSetTabWidget.cpp  GetSetTabWidget.h  GetSetWidget.cpp  GetSetWidget.h  ProgressInterface.hxx  cmakelists.txt
GetSetObjects/: CMakeLists.txt  Configurator.hxx  Factory.h  ObjectFactory.cpp  ObjectFactory.h
LibGetSet/: CMakeLists.txt  GetSetConfig.cmake  GetSetConfig.cmake.in  GetSetConfigVersion.cmake  GetSetConfigVersion.cmake.in
LibGetSet/Apps/: CMakeLists.txt  GetSet.xml  GetSetScript.getset  ScriptSyntax.txt
LibGetSet/GetSet/: CMakeLists.txt  GetSetCmdLine.hxx  GetSetIO.cpp  GetSetInternal.cpp  GetSetInternal.h  GetSetLog.hxx  GetSetObjects.cpp  GetSetScripting.cpp  StringHexData.hxx
LibGetSet/GetSetGui/: CMakeLists.txt  GetSetGui.cpp  GetSetModalDialog.cpp  GetSetProgressWindow.cpp  GetSetScriptEdit.cpp  GetSetTabWidget.cpp  GetSetTabWidget.h  GetSetWidget.h
LibGetSet/examples/: README.txt
LibGetSet/examples/autoconf/: compute_fractal.xml
LibGetSet/examples/autoconf/compute_fractal_sourcecode/: CMakeLists.txt  main.c
LibGetSet/examples/autogui/: CMakeLists.txt  main.cpp
LibGetSet/examples/autogui_header_only/: GetSetAutoGui.hxx
LibGetSet/examples/autogui_header_only/GetSetCommandLine/: GetSetCmdLine.hxx  TypeString.hxx
LibGetSet/examples/console/: simple.cpp
LibGetSet/examples/gui/: README.txt
docs/: Makefile  conf.py  index.rst
epipolar_consistency/: __init__.py  _launch_binaries.py  _utils.py  skeleton.py
examples/autoconf/: README.txt  compute_fractal_gui.bat
examples/autogui/: CMakeLists.txt  main.cpp
examples/autogui_header_only/: CMakeLists.txt  GetSetAutoGui.hxx  main.cpp
examples/console/: CMakeLists.txt  README.txt  cmakelists.txt  simple.cpp
examples/gui/: CMakeLists.txt  README.txt  advanced.cpp  simplegui.cpp
tests/: conftest.py  test_display_image.py  test_projective_geometry.py  test_skeleton.py
